# UnsAssignments

./: README.MD  sekar.cpp
001GuessMyNumber/: main.cpp
002ioAndCalculation/: README.MD
003AdvancedControlFlow/: README.MD  program3.c  program4_switch.c  program5.c  program6.c
004func-array-ptr/: program_2.c  program_3.c
006prak_2/: expo_squaring.c
007responsi_1/: main.cpp  ver2.cpp
007responsi_1/babas/: babasbetter.cpp
010tgs_ak/: readme.md
010tgs_ak/contoh_textfile/: nama1.txt  places2.mydata
010tgs_ak/include/: stdafx.h
011belajar_uas1/: file_processing.c  lkdList.c  uas2.cpp  variadic.c
011belajar_uas1/testfiles/: dua.txt  (+2 more)
012prak_SDA/: queue2stacks.cpp  queue2stacks.txt
013prak_SDA/: median.cpp  median.txt  median2.cpp  settest.cpp  stadiun.cpp  stadiun.txt
014prak_SDA-Tree/: tree.cpp
015prak_SDA-hackerrank/: tree.cpp
016tugas_quiz/: swap.c  swapsalah.c
017bogoSort/: bogosort.cpp  pseudocode.txt
10tgs_ak/: CMakeLists.txt  readme.md  task_description.md
10tgs_ak/contoh_textfile/: places2.mydata
10tgs_ak/include/: linkedlist.h  program.h  stdafx.h
10tgs_ak/src/: main.c  program.c
1GuessMyNumber/: README.MD
2ioAndCalculation/: program1.c  program2.c
3AdvancedControlFlow/: program1.c  program2.c  program4_ifelse.c
4func-array-ptr/: program_1.c  program_4.c
91tgs_ak/: .gitignore  selamat_datang.txt  task_description.md
92belajar_uas1/: tree.c  uas.c
93prak_SDA/: fibotidakbiasa.cpp  fibotidakbiasa.txt
9preprocessor/: minimum.cpp  printarray.cpp
file_stream/: test.cpp  test.txt
shop_inventory/: contoh.txt  mine.cpp
(+19 files in other folders)
